--- a/lib/platform_web/templates/player_session/new.html.eex
+++ b/lib/platform_web/templates/player_session/new.html.eex
@@ -1,25 +1,17 @@
-<h2>New Player</h2>
+<h2>Player Sign In</h2>
 
-<%= form_for @changeset , player_path(@conn, :create), fn f -> %>
-<%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Watch your step... Bananas everywhere... 🍌🍌🍌🍌🍌 Please check the errors below.</p>
-    </div>
-  <% end %>
-
+<%= form_for @conn, player_session_path(@conn, :create), [as: :session], fn f -> %>
   <div class="form-group">
     <%= label f, :username, "Player Username", class: "control-label" %>
     <%= text_input f, :username, placeholder: "Enter username...", class: "form-control" %>
     <%= error_tag f, :username %>
   </div>
-
   <div class="form-group">
     <%= label f, :password, "Player Password", class: "control-label" %>
     <%= password_input f, :password, placeholder: "Enter password...", class: "form-control" %>
     <%= error_tag f, :password %>
   </div>
-
   <div class="form-group">
-    <%= submit "Submit", class: "btn btn-success" %>
+    <%= submit "Sign In", class: "btn btn-primary" %>
   </div>
-<% end %>
+<%end%>
